language/move-lang/tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move
module M {
    foo() {
        let f = 0;
        false::M { f } = 0;

        let f = 0;
        0::M { f } = 0;

        let f = 0;
        foo().M { f } = 0;
    }

}
